# web2api

./: .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  docker-compose.yml  pyproject.toml
recipes/deepl/: recipe.yaml  scraper.py
recipes/deepl-en-de/: recipe.yaml  scraper.py
recipes/hackernews/: README.md  recipe.yaml
recipes/x/: scraper.py
scripts/: ralph.sh
specs/: api-schema.md  browser-pool.md  docker.md  overview.md  plugin-discovery.md  recipe-format.md  scraping-engine.md  testing.md
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/integration/: test_api.py  test_discovery.py  test_hackernews_live.py  test_pool.py  test_scraping.py
tests/unit/: test_cache.py  test_cli.py  test_config.py  test_plugin.py  test_plugin_manager.py  test_recipe_manager.py  test_self_update.py  test_smoke.py  test_transforms.py  test_url_builder.py
web2api/: __init__.py  cache.py  cli.py  config.py  engine.py  logging_utils.py  main.py  mcp_bridge.py  mcp_server.py  mcp_utils.py  plugin.py  plugin_manager.py  pool.py  recipe_admin_api.py  recipe_manager.py  registry.py  schemas.py  scraper.py  self_update.py
web2api/bundled/plugins/: catalog.yaml
web2api/templates/: index.html
